Fixed word wrap on posts

--- a/bbs.css
+++ b/bbs.css
@@ -180,6 +180,7 @@ pre {
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;
+    word-break: break-word;
     background-color: transparent;
     border: none;
     color: #f9f9f9;
